--- a/static/css/concept2.css
+++ b/static/css/concept2.css
@@ -1,31 +1,55 @@
-/* Symmetry */
-#zoomed-room {
-  background-color: #dbd6d3ff;
-  border-radius: 5px;
-  max-width: 100%;
-  height: 448px;
+/* Symmetry Concept About CSS */
+h2 {
+  padding: 10px 30px -0px;
+  margin-left: 245px;
 }
-
-#normal-bed {
-  width: 320px;
-  height: 270px;
-  border-radius: 5px;
-}
-
-#sym-options {
-  height: 90px;
-  width: 70px;
-}
-
-#symmetry-ex1 img {
-  max-width: 100%;
+.image {
+  width: 700px;
   height: auto;
+  margin-top: -4%;
+  margin-bottom: -5%;
 }
 
+p {
+  font-size: 18px;
+  margin: 0px 80px 0px;
+}
+
+@media only screen and (max-width: 1200px) {
+  h2 {
+    margin-left: 200px;
+  }
+  .image {
+    width: 690px;
+  }
+}
+@media only screen and (max-width: 992px) {
+  .image {
+    width: 950px;
+  }
+  p {
+    margin: 0px 18px 0px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  h2 {
+    margin-left: 30px;
+  }
+  p {
+    margin: 0px 50px 0px;
+  }
+  .responsive-btn {
+    margin-left: 40px;
+  }
+}
+
+/* Examples and Self-Check CSS */
 .text-bubble2 {
   text-align: center;
   padding: 20px;
-  margin-top: 15px;
+  margin-top: 20px;
+  margin-bottom: 0%;
   background-color: #ede2d7ff;
   height: 100px;
   border-radius: 20px;
@@ -42,4 +66,48 @@ button {
 
 button:hover {
   cursor: pointer;
+}
+
+.prev-btn {
+  margin-left: 50%;
+}
+
+.next-btn {
+  margin-left: 30%;
+}
+
+.self-check {
+  margin-left: 22%;
+}
+
+.incorrect-div {
+  border: none;
+  width: 100px;
+  height: 100px;
+  margin-top: -30%;
+  margin-left: 35%;
+}
+
+.correct-div {
+  border: none;
+  width: 100px;
+  height: 100px;
+  margin-top: -30%;
+  margin-right: -60%;
+}
+
+#sym-options {
+  margin-top: 0%;
+  height: auto;
+  max-width: 80%;
+}
+
+.green-text {
+  color: #19676b;
+  font-weight: bolder;
+}
+
+.red-text {
+  color: #e06666;
+  font-weight: bolder;
 }
