--- a/static/css/concept3.css
+++ b/static/css/concept3.css
@@ -1,51 +1,87 @@
-/* Chi */
-#chi-room {
-  background-color: #dbd6d3ff;
-  border-radius: 5px;
-  height: 430px;
-  width: 600px;
-  margin-top: 20px;
-}
-
-#chi-door {
-  margin-top: 25px;
-  margin-left: 50px;
-  width: 60px;
-  height: 120px;
-}
-
 .text-bubble3 {
-  text-align: center;
-  margin-top: 90px;
+  margin-top: 75px;
   padding: 20px;
   background-color: #ede2d7ff;
-  height: 100px;
+  height: auto;
+  width: auto;
   border-radius: 20px;
 }
 
-#chi-window {
-  margin-left: -25px;
-  height: 100px;
+h2 {
+  padding: 10px 30px -0px;
+  margin-left: 245px;
 }
-#painting {
-  margin-top: 25px;
-  width: 60px;
-  height: 120px;
+.image {
+  width: 750px;
+  height: auto;
+  margin-top: -4%;
+  margin-right: 20px;
+  margin-bottom: -5%;
+}
+
+p {
+  font-size: 18px;
+  margin: 0px 80px 0px;
+}
+
+#chi-selfcheck {
+  margin-left: -20%;
 }
 
 #mirror {
-  margin-top: -60px;
-  text-align: center;
-  width: 60px;
-  height: 120px;
+  margin-top: 28%;
 }
 
-.chi-op2 {
-  margin-left: 84px;
-  margin-top: 130px;
+.chi-txt-and-mirror {
+  margin-left: -8%;
+}
+.incorrect-div {
+  border: none;
+  width: 85px;
+  height: 135px;
+  margin-top: -75%;
+  margin-left: 80%;
 }
 
-#chi-ex img {
-  max-width: 100%;
-  height: auto;
+.correct-div {
+  border: none;
+  width: 85px;
+  height: 135px;
+  margin-top: -2%;
+  margin-left: 40%;
+}
+
+button {
+  font-size: 20px;
+  background-color: #cfb7a1ff;
+  color: white;
+  padding: 10px 20px 10px 20px;
+  border: none;
+  border-radius: 10px !important;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.prev-btn {
+  margin-left: 50%;
+}
+
+.next-btn {
+  margin-left: 30%;
+}
+
+.self-check {
+  margin-left: 22%;
+}
+
+.green-text {
+  color: #19676b;
+  font-weight: bolder;
+}
+
+.red-text {
+  color: #e06666;
+  font-weight: bolder;
 }
