--- a/templates/concept2/concept2.5.html
+++ b/templates/concept2/concept2.5.html
@@ -6,6 +6,7 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
+    <script src="{{ url_for('static', filename='scripts/concept2.js') }}"></script>
 
     <link rel="stylesheet" href="../static/css/main.css" />
     <link rel="stylesheet" href="../static/css/concept2.css" />
@@ -29,44 +30,26 @@
       <div class="row">
         <h1 class="examples-header">Self-check: Symmetry</h1>
       </div>
+
       <div class="row">
-        <div class="col-md-8" id="symmetry-ex1">
-          <div id="zoomed-room">
-            <div class="row">
-              <div class="col-md-4">
-                <div class="row">
-                  <div class="col-md-6"></div>
-                  <div
-                    class="col-md-4 droppable"
-                    id="drop1"
-                    style="border: #84735e 3px dashed"
-                  ></div>
-                  <div class="col-md-2"></div>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <img
-                  src="{{ url_for('static', filename='images/bed.png') }}"
-                  id="normal-bed"
-                  class="draggable"
-                />
-              </div>
-              <div class="col-md-4">
-                <div class="row">
-                  <div class="col-md-2"></div>
-                  <div
-                    class="col-md-4 droppable"
-                    id="drop2"
-                    style="border: #84735e 3px dashed"
-                  ></div>
-                  <div class="col-md-6"></div>
-                </div>
-              </div>
+        <div class="col-md-8">
+          <div class="row">
+            <img
+              src="{{ url_for('static', filename='images/sym-self-check.png') }}"
+              style="width: 780px; margin-left: -68px; margin-top: -5%"
+            />
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="droppable incorrect-div"></div>
+            </div>
+            <div class="col-md-6">
+              <div class="droppable correct-div"></div>
             </div>
           </div>
         </div>
 
-        <div class="col-md-4" style="border: black 1px solid">
+        <div class="col-md-4">
           <div class="row">
             <div class="col-md-1"></div>
 
@@ -75,7 +58,7 @@
             </div>
 
             <div class="row mt-3">
-              <div class="col-md-12 text-center">
+              <div class="col-md-12">
                 <button
                   id="try-again-button"
                   class="try-button"
@@ -87,7 +70,7 @@
             </div>
 
             <div class="row mt-3">
-              <div class="col-md-12 text-center">
+              <div class="col-md-12">
                 <button
                   id="next-concept-button"
                   class="next-button"
@@ -101,16 +84,16 @@
             <div class="col-md-1"></div>
           </div>
 
-          <div class="row">
+          <div class="row mt-4">
             <div class="col-md-1"></div>
-            <div class="col-md-5 text-center pt-4">
+            <div class="col-md-5">
               <img
                 src="{{ url_for('static', filename='images/sym-chair.png') }}"
                 id="sym-options"
                 class="img-fluid draggable"
               />
             </div>
-            <div class="col-md-5 text-center pt-4">
+            <div class="col-md-5">
               <img
                 src="{{ url_for('static', filename='images/sym-plant.png') }}"
                 id="sym-options"
@@ -121,14 +104,15 @@
           </div>
           <div class="row">
             <div class="col-md-1"></div>
-            <div class="col-md-5 text-center pt-4">
+            <div class="col-md-5">
               <img
                 src="{{ url_for('static', filename='images/sym-table.png') }}"
                 id="sym-options"
                 class="img-fluid draggable"
               />
+              <div class="col-md-1"></div>
             </div>
-            <div class="col-md-5 text-center pt-4">
+            <div class="col-md-5">
               <img
                 src="{{ url_for('static', filename='images/sym-dresser.png') }}"
                 id="sym-options"
@@ -140,6 +124,5 @@
         </div>
       </div>
     </div>
-    <script src="{{ url_for('static', filename='scripts/concept2.js') }}"></script>
   </body>
 </html>
