--- a/templates/concept3/concept3.1.html
+++ b/templates/concept3/concept3.1.html
@@ -9,7 +9,6 @@
 
     <link rel="stylesheet" href="../static/css/main.css" />
     <link rel="stylesheet" href="../static/css/concept3.css" />
-
     <link
       rel="stylesheet"
       href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
@@ -18,7 +17,6 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     />
-
     <title>Concept 3: Chi</title>
   </head>
   <body>
@@ -27,24 +25,45 @@
 
     <div class="container spectral-regular">
       <div class="row">
-        <h1 class="examples-header">Example of mirror placement for chi</h1>
+        <div class="col-md-12">
+          <h2>Example of Mirror Placement for Chi</h2>
+        </div>
       </div>
 
       <div class="row">
-        <div class="col-md-8" id="chi-ex">
-          <img src="{{ url_for('static', filename='images/chi-ex1.png') }}" />
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <img
+            src="{{ url_for('static', filename='images/chi-ex1.png') }}"
+            class="image img-fluid"
+          />
+        </div>
+        <div class="col-md-2"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <p class="mt-0">
+            Place mirrors across from <span class="green-text">windows</span> to
+            reflect <span class="green-text">natural light</span>or a
+            <span class="green-text">beautiful view</span>, which boosts
+            positive chi.
+          </p>
+        </div>
+        <div class="col-md-2"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6">
+          <button onclick="window.location.href='/concept3'" class="prev-btn">
+            < Prev
+          </button>
         </div>
 
-        <div class="col-md-4" style="border: black 1px solid">
-          <div class="text-bubble">
-            Place mirrors across from windows to reflect natural light or a
-            beautiful view, which boosts positive chi.
-          </div>
-          <button
-            onclick="window.location.href='/concept3-2'"
-            class="btn-next mt-3"
-          >
-            Next
+        <div class="col-md-6">
+          <button onclick="window.location.href='/concept3-2'" class="next-btn">
+            Next >
           </button>
         </div>
       </div>
