--- a/templates/concept3/concept3.3.html
+++ b/templates/concept3/concept3.3.html
@@ -9,7 +9,6 @@
 
     <link rel="stylesheet" href="../static/css/main.css" />
     <link rel="stylesheet" href="../static/css/concept3.css" />
-
     <link
       rel="stylesheet"
       href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
@@ -18,7 +17,6 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     />
-
     <title>Concept 3: Chi</title>
   </head>
   <body>
@@ -27,33 +25,45 @@
 
     <div class="container spectral-regular">
       <div class="row">
-        <h1 class="examples-header">Example of mirror placement for chi</h1>
+        <div class="col-md-12">
+          <h2>Example of Mirror Placement for Chi</h2>
+        </div>
       </div>
 
       <div class="row">
-        <div class="col-md-8" id="chi-ex">
-          <img src="{{ url_for('static', filename='images/chi-ex3.png') }}" />
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <img
+            src="{{ url_for('static', filename='images/chi-ex3.png') }}"
+            class="image img-fluid"
+          />
+        </div>
+        <div class="col-md-2"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <p class="mt-0">
+            <span style="font-weight: bolder">No window?</span>Place your mirror
+            in front of something that brings you
+            <span class="green-text">(e.g. art) to double the good chi.</span>
+          </p>
+        </div>
+        <div class="col-md-2"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6">
+          <button onclick="window.location.href='/concept3-2'" class="prev-btn">
+            < Prev
+          </button>
         </div>
 
-        <div class="col-md-4" style="border: black 1px solid">
-          <div class="text-bubble">
-            No window? Place your mirror in front of something that brings you
-            joy (e.g. art) to double the good chi.
-          </div>
-          <button onclick="window.location.href='/concept3-2'">Prev</button>
-
-          <div class="row mt-5">
-            <div class="col-md-6 text-center">
-              <button onclick="window.location.href='/concept3'">
-                Review Concept
-              </button>
-            </div>
-            <div class="col-md-6">
-              <button onclick="window.location.href='/concept3-4'">
-                Self-check
-              </button>
-            </div>
-          </div>
+        <div class="col-md-6">
+          <button onclick="window.location.href='/concept3-4'" class="next-btn">
+            Next
+          </button>
         </div>
       </div>
     </div>
