--- a/templates/quizzes/quiz1.html
+++ b/templates/quizzes/quiz1.html
@@ -31,7 +31,9 @@
 
     <div class="container spectral-regular">
       <div class="row">
-        <h1 class="examples-header">First, move the bed to <b>(1) command position</b> and <b>(2) allows for symmetry</b> of bedside furniture.
+        <h1 class="examples-header"
+        style="font-size: 25px; margin-left: 40px; margin-top: 50px; margin-bottom: 50px">
+        First, move the bed to <b>(1) command position</b> and <b>(2) allows for symmetry</b> of bedside furniture.
         </h1>
       </div>
 
@@ -59,7 +61,7 @@
 
         <div class="col-md-4">
             <div class="text-center">
-                <img src="{{ url_for('static', filename='images/bed2.png') }}" class="draggable bed-img" style="width: 150px">
+                <img src="{{ url_for('static', filename='images/quiz-bed.png') }}" class="draggable bed-img" style="width: 75px">
             </div>
             <div class="text-center text-bubble3">Drag and drop the bed to the command position.</div>
             <button id="next-question-button" class="next-button" style="display: none; margin-top: 10px;">Next Question</button>
