--- a/static/css/concept1.css
+++ b/static/css/concept1.css
@@ -50,6 +50,7 @@ button {
   padding: 10px 20px 10px 20px;
   border: none;
   border-radius: 10px !important; 
+  cursor: pointer;
 }
 
 button:hover {
