--- a/static/css/home.css
+++ b/static/css/home.css
@@ -42,13 +42,31 @@
   font-size: 18px;
   cursor: pointer;
   margin: 40px 0px 80px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+
 }
 
 .learn-button:hover {
   /*box-shadow: #cfb7a1ff 3px solid;*/
-  box-shadow: 2px 2px 10px #cfb7a1ff;
+  transform: translateY(-5px);
+  box-shadow: 0px 5px 15px #cfb7a1ff; 
+
 }
 
 .authors {
   color: #666;
+}
+
+.btn-block {
+  background-color: #cfb7a1;
+  color: #fff;
+  border: none;
+  font-size: 18px;
+  cursor: pointer;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.btn-block:hover {
+  transform: translateY(-5px);
+  box-shadow: 0px 5px 15px #cfb7a1ff; 
 }
